<resources>
    <string name="app_name">itcity</string>
    <string name="tap_to_continue">tap to continu</string>
    <string name="button2">Button</string>
    <string-array name="choice_items2">
        <item>Результативность</item>
        <item>Массовость</item>
        <item>Дискретность</item>
        <item>Детерминированность</item>
    </string-array>
    <string-array name="choice_items3">
        <item>Словесно-формульная </item>
        <item>Графическая</item>
        <item>Псевдокод</item>
        <item>Программа</item>
    </string-array>
    <string-array name="choice_items5">
        <item>Линейная</item>
        <item>Ветвящаяся</item>
        <item>Циклическая</item>
    </string-array>
    <string-array name="secchoice_items1">
        <item>Бесплатный фриланс</item>
        <item>Сообщения на почту о благотворительности,выигрыше</item>
        <item>Покупка билетов онлайн</item>
        <item>Во всех перечисленных</item>
        <item>Не в каких из вышеперечисленных</item>
    </string-array>
    <string-array name="secchoice_items2">
        <item>Проверить, существует ли такая организация, и, если да, то перевести деньги на указанный счет</item>
        <item>Перевести деньги на лечение ребенка</item>
        <item>Проигнорировать данное сообщение</item>
    </string-array>
    <string-array name="secchoice_items3">
        <item>Переслать реквизиты</item>
        <item>Позвонить в банк и узнать о состоянии карты</item>
        <item>Покупка билетов онлайн</item>
    </string-array>
    <string-array name="secchoice_items5">
        <item>Проверить, не является ли ссылка фальшивой</item>
        <item>Позвонить отправителю и спросить, была ли им отправлена эта ссылка</item>
        <item>Проигнорировать сообщение</item>
    </string-array>
    <string-array name="compchoice_items2">
        <item>Материнская плата</item>
        <item>Блок питания</item>
        <item>Корпус</item>
    </string-array>
    <string-array name="compchoice_items5">
        <item>Кард-ридер</item>
        <item>Флешка</item>
        <item>Web-камера</item>
        <item>Колонки</item>
        <item>Монитор</item>
        <item>Клавиатура</item>
        <item>Микрофон</item>
        <item>Мышь</item>
    </string-array>
    <string-array name="infchoice_items10">
        <item>Эквивалентность</item>
        <item>Строгая дизъюнкция</item>
        <item>Импликация</item>
    </string-array>
    <string-array name="infchoice_items9">
        <item>Конъюнкция</item>
        <item>Дизъюнкция</item>
        <item>Отрицание</item>
    </string-array>
    <string-array name="infchoice_items12">
        <item>Взвешенный</item>
        <item>Неориентированный|невзвешенный</item>
        <item>Ориентированный</item>
    </string-array>
    <string-array name="progchoice_items1">
        <item>{}</item>
        <item>()</item>
        <item>;</item>
        <item>Всё верно</item>
    </string-array>
    <string-array name="progchoice_items3">
        <item>50</item>
        <item>int</item>
        <item>;</item>
        <item>i</item>
        <item>=</item>
    </string-array>
    <string-array name="progchoice_items7">
        <item>switch,case,break,default</item>
        <item>switch,case,static,main</item>
        <item>case,break,#include</item>
        <item>нет правильного ответа</item>
    </string-array>
    <string-array name="progchoice_items8">
        <item>Цикл с параметром</item>
        <item>Цикл с предусловием</item>
        <item>Цикл с постусловием </item>
    </string-array>
    <string-array name="progchoice_items12">
        <item>Освободить память</item>
        <item>Выделить память</item>
    </string-array>
    <string name="action_item1">кнопка 1</string>
    <string name="action_item2">кнопка 2</string>
    <string name="action_item3">кнопка 3</string>
    <string name="action_item4">кнопка 4</string>
    <string name="string">нажмите для продолжения...</string>
    <string name="strAVT">АВТОРИЗАЦИЯ</string>
    <string name="enter">ВОЙТИ</string>
    <string name="reg">создать</string>
    <string name="email">Email:</string>
    <string name="password">Password:</string>
    <string name="create">создать</string>
    <string name="comin">Войти</string>
    <string name="title_activity_registration">ActivityRegistration</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="textview1">TextView</string>
    <string name="todo1">TODO</string>
    <string name="logs">Логин</string>
    <string name="passw">Пароль</string>
    <string name="todo23232">TODO</string>
    <string name="regi">РЕГИСТРАЦИЯ</string>
    <string name="textview2">TextView</string>
    <string name="textview3">TextView</string>
    <string name="zabps">Забыли пароль?</string>
    <string name="netakk">Ещё нет аккаунта?</string>
    <string name="u8">Логин</string>
    <string name="f">Пароль</string>
    <string name="come">ВОЙТИ</string>
    <string name="register">РЕГИСТРАЦИЯ</string>
    <string name="usname">Имя пользователя</string>
    <string name="passsword">Пароль</string>
    <string name="pass2">Повторите пароль</string>
    <string name="registrat">ЗАРЕГИСТРИРОВАТЬСЯ</string>
    <string name="email1">Email</string>
    <string name="buttonmap3">Button</string>
    <string name="todo33">TODO</string>
    <string name="todo23">TODO</string>
    <string name="df">Ваш рейтинг</string>
    <string name="title_activity_computer__teory__task">Computer_Teory_Task</string>
    <string name="title_activity__profile">Activity_Profile</string>
    <string name="title_activity_security__teory__task">Security_Teory_Task</string>
    <string name="_3_n_n_10_if_x_10_n_min_n_max_n"><![CDATA[3. Начало\nВвести данные\nЕсли переменная меньше 10 или if(x < 10)\nВывести «Min»\nИначе вывести «Max»\nКонец]]></string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="include_iostream_nusing_nnamespace_nstd_nint_nmain_n_nreturn_0_n"><![CDATA[#include <iostream>\nusing\nnamespace\nstd;\nint\nmain()\n{\nreturn 0;\n}]]></string>
    <string name="n_1_5_5_n_2_n_3_n_4_n_5_n">Мы можем\n 1. сложить два числа 5+5\n 2. вычесть одно число из другого\n 3. разделить одно число на другое\n 4. умножить\n 5. получить остаток от деления\n</string>
    <string name="n_include_iostream_nusing_namespace_std_nint_main_nint_a_5_nint_b_6_nint_c_a_b_ncout_c_endl_nreturn_0_n"><![CDATA[Пример:\n#include<iostream>\nusing namespace std;\nint main(){\nint a=5;\nint b=6;\nint c=a+b;\ncout <<c<<endl;\nreturn 0;\n}]]></string>
    <string name="_2_main_void">Функции – это именованный фрагмент кода, который повторяется в программе 2 или больше раз. Когда мы пишем функцию, необходимо указать тип и дать ей имя и в дальнейшем, чтобы её вызвать в программе (из main() или из другой функции), надо обратиться к ней по этому имени. Функция может возвращать значения, если это функция не типа void.</string>
    <string name="n_include_iostream_n_using_namespace_std_n_int_main_n_cout_n_cout_n_system_pause_n_return_0_n"><![CDATA[#Реализация без функции\n #include <iostream>\n using namespace std;\n int main() {\n cout << \'Функция очень хороший инструмент в программировании\';\n cout << \'С помощью его можно улучшить свой уровень программирования\';\n system (\'pause\')\n return 0;\n }]]></string>
    <string name="n_include_iostream_n_using_namespace_std_n_void_func_n_cout_n_cout_n_n_int_main_n_func_n_system_pause_n_return_0_n"><![CDATA[А вот если бы мы использовали функции, то у нас получилось бы так:\n #include <iostream>\n using namespace std;\n void func () { // функция\n cout << \'Функция очень хороший инструмент в программировании\';\n cout << \'С помощью его можно улучшить свой уровень программирования\';\n }\n int main() {\n func(); // вызов функции\n system (\'pause\')\n return 0;\n }]]></string>
    <string name="fdfd">Массив – это область памяти, где могут последовательно храниться несколько значений. Массивы бывают двух типов одномерные и многомерные.</string>
    <string name="m_n_n_n_n_n_n_int_a_15_n_double_35_n_n_n_m_n_n_m_n_m_n_n_int_s_2_4_1_2_3_4_5_6_n">Описание одномерного массива: m\n Тип_массива идентификатор_массива [n]\n n – количество элементов массива по соответствующей размерности.\n Примеры описания одномерного массива:\n int a [15];\n double[35];\n Описание двумерного массива:\n Тип_массива идентификатор_массива [n] [m]\n n,m - количество элементов массива по соответствующей размерности (т.е. общее количество элементов массива равно n*m)\n Пример описания двумерного массива:\n int S [2] [4] = { {1,2,3,4}, {5,6}};\n</string>
    <string name="n_1_n_ndouble_f_1_0_2_0_3_0_4_0_5_0_n_nint_m_10_1_2_3_n_2_n_int_i_n_int_a_const_n_for_i_0_i_const_i_n_n_cin_a_i_n_n_3_n_a_2_b_2_c_k_n"><![CDATA[Инициализация элементов массива:\n 1. Вариант инициализации массива при описании\n - перечисление начальных значений элементов массива без указания размера массива (вычисляется автоматически)\ndouble f [] = {1.0, 2.0, 3.0, 4.0, 5.0}\n - если в определении массива явно указан его размер, то количество начальных значений не может быть больше, чем объявленная длина массива. Если количество начальных значений меньше, чем объявленная длина, то инициализируются только первые элементы.\nint M[10] = {1,2,3}\n 2. инициализация массива при вводе значений в цикле, например с клавиатуры:\n int i;\n int a[const];\n for(i=0, i<const, i++)\n {\n Cin>>a[i];\n }\n 3. Инициализация в процессе вычислений:\n a[2]= b[2] + c[k];\n]]></string>
    <string name="er">\t}</string>
    <string name="rt">return 0;</string>
    <string name="ty">}</string>
    <string name="yu"><![CDATA[cout<<NO<<endl;]]></string>
    <string name="ui">else {</string>
    <string name="io">}</string>
    <string name="op"><![CDATA[cout<<YES<<endl;]]></string>
    <string name="as">{</string>
    <string name="sd"><![CDATA[b >=100)]]></string>
    <string name="dfo"><![CDATA[if (a <= 100]]></string>
    <string name="fg"><![CDATA[cin >> b;]]></string>
    <string name="gh"><![CDATA[cin >> a;]]></string>
    <string name="hj">int a,b;</string>
    <string name="jk">int main(){</string>
    <string name="kll">using namespace std;</string>
    <string name="kl"><![CDATA[#include<iostream>]]></string>
    <string name="zx">Впиши правильный знак если а меньше или равно 100 и b больше или равно 100.</string>
    <string name="xc">ПРОДОЛЖИТЬ</string>
    <string name="cv">ПРОГРАММИРОВАНИЕ</string>
    <string name="wms">\t}</string>
    <string name="qdqw">return 0;</string>
    <string name="saf">}</string>
    <string name="afe">num*=5;</string>
    <string name="rhr">else {</string>
    <string name="gwe">}</string>
    <string name="tyrjthrtg">num+=1;</string>
    <string name="rj3rg">{</string>
    <string name="bdgb">if (</string>
    <string name="sgsfb">cin » num;</string>
    <string name="tthnrg">int num;</string>
    <string name="dgwf">int main(){</string>
    <string name="gfhgnh">using namespace std;</string>
    <string name="gwfvcv">)</string>
    <string name="gnrbg"><![CDATA[#include<iostream>]]></string>
    <string name="dfwdvf">Необходимо прибавить 1 к введенному числу если четное, иначе умножить на 5. Ответ вводить без пробелов.</string>
    <string name="jykjhn">ПРОДОЛЖИТЬ</string>
    <string name="sdgbbgb">ПРОГРАММИРОВАНИЕ</string>
</resources>