<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item
        android:icon="@android:drawable/ic_menu_manage"
        android:id="@+id/menu1"
        android:orderInCategory="1"
        android:title="@string/action_item1"
        app:showAsAction="ifRoom" />
    <item
        android:icon="@android:drawable/ic_menu_crop"
        android:id="@+id/menu2"
        android:orderInCategory="2"
        android:title="@string/action_item2"
        app:showAsAction="ifRoom" />
    <group
        android:id="@+id/group1">
    <item
        android:id="@+id/menu3"
        android:orderInCategory="3"
        android:title="@string/action_item3"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu4"
        android:orderInCategory="4"
        android:title="@string/action_item4"
        app:showAsAction="never" />
    </group>
</menu>
