<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="-2dp"
    android:background="@drawable/teoria_krasnye1"
    android:paddingTop="-11dp">

    <Button
        android:id="@+id/bottomSecurityK"
        android:layout_width="76dp"
        android:layout_height="62dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/_16"
        app:backgroundTint="#FFFFFF"
        app:iconTint="#FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/podlSecurity"
        android:layout_width="match_parent"
        android:layout_height="93dp"
        android:padding="-1dp"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/_____2_4" />

    <TextView
        android:id="@+id/textsecurity"
        android:layout_width="263dp"
        android:layout_height="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/sdgbbgb"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/podlSecurity"
        app:layout_constraintHorizontal_bias="0.464"
        app:layout_constraintStart_toEndOf="@+id/bottomSecurityK"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/continueSec"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:text="@string/jykjhn"
        android:textSize="24sp"
        app:backgroundTint="#660000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent" />

    <ScrollView
        android:layout_width="405dp"
        android:layout_height="545dp"
        app:layout_constraintBottom_toTopOf="@+id/continueSec"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/podlSecurity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="5dp"
                android:background="@drawable/ic_podlozhka_teoria_belaya"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textSec5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="15dp"
                    android:text="@string/dfwdvf"
                    android:textColor="#3D0250" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="5dp"
                android:background="@drawable/ic_podlozhka_teoria_belaya"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView49"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/gnrbg"
                    android:textColor="#3D0250"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/textView112"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/gfhgnh"
                    android:textColor="#3D0250"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/textView113"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/dgwf"
                    android:textColor="#3D0250"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/textView114"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tthnrg"
                    android:textColor="#3D0250"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/textView115"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sgsfb"
                    android:textColor="#3D0250"
                    android:textSize="18sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView53"
                        android:layout_width="wrap_content"
                        android:layout_height="35dp"
                        android:layout_gravity="bottom"
                        android:text="@string/bdgb"
                        android:textColor="#3D0250"
                        android:textSize="18sp" />

                    <EditText
                        android:id="@+id/editTextTextEmailAddress3"
                        android:layout_width="58dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:inputType="textEmailAddress" />

                    <TextView
                        android:id="@+id/textView117"
                        android:layout_width="165dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/gwfvcv"
                        android:textColor="#3D0250"
                        android:textSize="18sp" />

                </LinearLayout>

                <TextView
                    android:id="@+id/textView125"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/rj3rg"
                    android:textColor="#3D0250"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/textView126"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tyrjthrtg"
                    android:textColor="#3D0250"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/textView128"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/gwe"
                    android:textColor="#3D0250"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/textView129"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/rhr"
                    android:textColor="#3D0250"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/textView130"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/afe"
                    android:textColor="#3D0250"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/textView131"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/saf"
                    android:textColor="#3D0250"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/textView52"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:text="@string/qdqw"
                    android:textColor="#3D0250"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/textView50"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:text="@string/wms"
                    android:textColor="#3D0250"
                    android:textSize="18sp" />


            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>